@@ -64,70 +64,70 @@
         <jts.version>1.19.0</jts.version> <!-- needs to track with gt/gs version -->
         <spatial4j.version>0.8</spatial4j.version> <!-- needs to track with jts version -->
         <ejml.version>0.41</ejml.version> <!-- needs to track with gt/gs version -->
-        <postgres.version>42.5.1</postgres.version>
-        <avro.version>1.11.1</avro.version> <!-- see also confluent.avro.version -->
-        <parquet.version>1.12.3</parquet.version>
-        <orc.version>1.8.2</orc.version>
-        <fasterxml.jackson.version>2.14.1</fasterxml.jackson.version> <!-- used by geoserver (2.13.2), spark (2.6.7) and arrow (2.7.1) -->
-        <fasterxml.jackson.databind.version>2.14.1</fasterxml.jackson.databind.version> <!-- used by geoserver (2.13.4.1), spark (2.6.7.1) and arrow (2.7.1) -->
+        <postgres.version>42.7.1</postgres.version>
+        <avro.version>1.11.3</avro.version> <!-- see also confluent.avro.version -->
+        <parquet.version>1.13.1</parquet.version>
+        <orc.version>1.9.2</orc.version>
+        <fasterxml.jackson.version>2.16.1</fasterxml.jackson.version> <!-- used by geoserver, spark and arrow -->
+        <fasterxml.jackson.databind.version>2.16.1</fasterxml.jackson.databind.version> <!-- used by geoserver, spark and arrow -->
         <codehaus.jackson.version>1.9.3</codehaus.jackson.version>
-        <json4s.version>3.6.12</json4s.version> <!-- version 4+ causes issues with spark 3.3 -->
-        <kryo.version>4.0.2</kryo.version>
-        <arrow.version>11.0.0</arrow.version>
-        <netty.version>4.1.85.Final</netty.version>
+        <json4s.version>3.6.12</json4s.version> <!-- version 4+ causes issues with spark 3.5 -->
+        <kryo.version>4.0.3</kryo.version>
+        <arrow.version>14.0.2</arrow.version>
+        <netty.version>4.1.100.Final</netty.version> <!-- newer versions require a fix in arrow 15 not yet released -->
         <metrics.version>3.2.6</metrics.version>
         <aws.sdk.version>1.11.421</aws.sdk.version>
-        <hsql.version>2.4.1</hsql.version> <!-- newer versions (at least 2.7+) require java 11 -->
-        <h2.version>2.2.220</h2.version>
-        <curator.version>4.3.0</curator.version> <!-- last version that supports zk 3.4 -->
-        <json.smart.version>2.4.8</json.smart.version> <!-- used by json-path (2.2.1) and hadoop-auth (2.3)-->
-        <json.path.version>2.7.0</json.path.version>
-        <spring.security.version>5.8.3</spring.security.version> <!-- geoserver ships with 5.1.13.RELEASE but that has several CVEs against it -->
-        <gson.version>2.10</gson.version>
-        <caffeine.version>2.9.3</caffeine.version> <!-- version 3+ requires java 11 -->
+        <hsql.version>2.7.2</hsql.version>
+        <h2.version>2.2.224</h2.version>
+        <curator.version>5.6.0</curator.version>
+        <json.smart.version>2.5.0</json.smart.version> <!-- used by json-path and hadoop-auth -->
+        <json.path.version>2.8.0</json.path.version>
+        <spring.security.version>5.8.9</spring.security.version> <!-- geoserver is still on 5.x -->
+        <gson.version>2.10.1</gson.version>
+        <caffeine.version>3.1.8</caffeine.version>
         <mango.version>3.0.0</mango.version>
-        <typesafe.config.version>1.4.2</typesafe.config.version>
-        <pureconfig.version>0.17.2</pureconfig.version>
-        <commons.csv.version>1.9.0</commons.csv.version>
-        <commons.io.version>2.8.0</commons.io.version> <!-- This should match what Hadoop uses (and thus Hbase and Accumulo) -->
-        <commons.compress.version>1.22</commons.compress.version>
-        <commons.cli.version>1.2</commons.cli.version>
+        <typesafe.config.version>1.4.3</typesafe.config.version>
+        <pureconfig.version>0.17.4</pureconfig.version>
+        <commons.csv.version>1.10.0</commons.csv.version>
+        <commons.io.version>2.15.1</commons.io.version>
+        <commons.compress.version>1.25.0</commons.compress.version>
+        <commons.cli.version>1.6.0</commons.cli.version>
         <commons.lang.version>2.6</commons.lang.version>
-        <commons.lang3.version>3.8.1</commons.lang3.version>
+        <commons.lang3.version>3.14.0</commons.lang3.version>
         <commons.collections.version>3.2.2</commons.collections.version>
         <commons.collections4.version>4.4</commons.collections4.version>
-        <commons.text.version>1.10.0</commons.text.version>
+        <commons.text.version>1.11.0</commons.text.version>
 
-        <specs2.version>4.9.2</specs2.version>
-        <junit.version>4.13.1</junit.version>
+        <specs2.version>4.20.4</specs2.version>
+        <junit.version>4.13.2</junit.version>
         <testcontainers.version>1.19.3</testcontainers.version>
 
         <!-- *** provided artifacts, not bundled to support multiple environments *** -->
 
         <accumulo.version>2.0.1</accumulo.version>
         <accumulo-21.version>2.1.1</accumulo-21.version>
-        <zookeeper.version>3.5.10</zookeeper.version>
+        <zookeeper.version>3.9.1</zookeeper.version>
         <thrift.version>0.12.0</thrift.version>
         <thrift-accumulo-21.version>0.17.0</thrift-accumulo-21.version>
         <hadoop.version>2.10.2</hadoop.version>
-        <spark.version>3.3.1</spark.version>
-        <hbase.version>2.5.2</hbase.version>
+        <spark.version>3.5.0</spark.version>
+        <hbase.version>2.5.7</hbase.version>
         <hbase-1.version>1.4.14</hbase-1.version>
         <protobuf.version>2.5.0</protobuf.version>
-        <cassandra.version>3.11.3</cassandra.version>
+        <cassandra.version>3.11.5</cassandra.version>
         <kafka.version>2.8.2</kafka.version>
         <zkclient.version>0.11</zkclient.version>
         <kafka.jopt.version>5.0.4</kafka.jopt.version>
         <confluent.version>6.2.7</confluent.version> <!-- corresponds to kafka 2.8 -->
         <confluent.recommended.version>6.2.7</confluent.recommended.version>
-        <confluent.avro.version>1.11.1</confluent.avro.version>
-        <sedona.version>1.3.1-incubating</sedona.version>
-        <sedona.spark.version>3.0</sedona.spark.version>
+        <confluent.avro.version>1.11.3</confluent.avro.version>
+        <sedona.version>1.5.0</sedona.version>
+        <sedona.spark.version>3.4</sedona.spark.version>
         <jts2geojson.version>0.16.1</jts2geojson.version> <!-- for testing Apache Sedona integration -->
 
         <!-- guava - versions vary across environments -->
         <guava.version>${geotools.guava.version}</guava.version>
-        <geotools.guava.version>30.1-jre</geotools.guava.version>
+        <geotools.guava.version>32.0.0-jre</geotools.guava.version>
         <accumulo.guava.version>28.0-jre</accumulo.guava.version>
         <hbase.guava.version>11.0.2</hbase.guava.version>
         <cassandra.guava.version>18.0</cassandra.guava.version>
@@ -135,14 +135,15 @@
 
         <slf4j.version>1.7.36</slf4j.version> <!-- 1.7.x is for hadoop 2 and accumulo 1.5.x -->
         <scalalogging.version>3.9.5</scalalogging.version>
-        <reload4j.version>1.2.22</reload4j.version>
+        <reload4j.version>1.2.25</reload4j.version>
 
         <!-- *** maven build configuration *** -->
 
         <!-- testing properties -->
         <maven.test.memory>-Xms512m -Xmx4g -XX:-UseGCOverheadLimit -XX:MaxJavaStackTraceDepth=1000000</maven.test.memory>
+        <maven.test.opens>--add-opens=java.base/java.nio=ALL-UNNAMED --illegal-access=warn</maven.test.opens>
         <maven.test.debug>-Xrunjdwp:transport=dt_socket,address=5005,server=y,suspend=y</maven.test.debug>
-        <maven.test.jvmargs>${maven.test.memory}</maven.test.jvmargs> <!--for java 11+: &#45;&#45;add-opens=java.base/java.nio=ALL-UNNAMED-->
+        <maven.test.jvmargs>${maven.test.memory} ${maven.test.opens}</maven.test.jvmargs>
         <test.fork.count>4</test.fork.count>
         <test.fork.reuse>true</test.fork.reuse>
         <!-- arrow tests become extremely slow with assertions enabled-->
@@ -175,7 +176,7 @@
         <profile>
             <id>debug-tests</id>
             <properties>
-                <maven.test.jvmargs>${maven.test.memory} ${maven.test.debug}</maven.test.jvmargs>
+                <maven.test.jvmargs>${maven.test.memory} ${maven.test.debug} ${maven.test.opens}</maven.test.jvmargs>
             </properties>
         </profile>
 
@@ -1774,7 +1775,7 @@
                 <!-- transitive dependency versioned due to license issues -->
                 <groupId>xml-apis</groupId>
                 <artifactId>xml-apis</artifactId>
-                <version>2.0.2</version>
+                <version>1.4.01</version> <!-- note, version 2 is actually _older_ than 1.4-->
             </dependency>
             <dependency>
                 <groupId>com.sun.xml.bind</groupId>
@@ -2315,6 +2316,10 @@
                         <groupId>org.slf4j</groupId>
                         <artifactId>slf4j-log4j12</artifactId>
                     </exclusion>
+                    <exclusion>
+                        <groupId>ch.qos.logback</groupId>
+                        <artifactId>*</artifactId>
+                    </exclusion>
                 </exclusions>
                 <scope>provided</scope>
             </dependency>
@@ -2627,7 +2632,7 @@
             <!-- apache sedona -->
             <dependency>
                 <groupId>org.apache.sedona</groupId>
-                <artifactId>sedona-core-${sedona.spark.version}_${scala.binary.version}</artifactId>
+                <artifactId>sedona-spark-${sedona.spark.version}_${scala.binary.version}</artifactId>
                 <version>${sedona.version}</version>
                 <scope>provided</scope>
                 <exclusions>
@@ -2639,7 +2644,7 @@
             </dependency>
             <dependency>
                 <groupId>org.apache.sedona</groupId>
-                <artifactId>sedona-sql-${sedona.spark.version}_${scala.binary.version}</artifactId>
+                <artifactId>sedona-spark-common-${sedona.spark.version}_${scala.binary.version}</artifactId>
                 <version>${sedona.version}</version>
                 <scope>provided</scope>
                 <exclusions>
@@ -2860,6 +2865,7 @@
         </testResources>
 
         <pluginManagement>
+            <!-- note: plugin versions are generally set to the latest available -->
             <plugins>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -2882,24 +2888,26 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-clean-plugin</artifactId>
-                    <!-- 3.1.0 was released 2018-04-14. -->
-                    <version>3.1.0</version>
+                    <version>3.3.2</version>
                 </plugin>
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>exec-maven-plugin</artifactId>
-                    <version>1.6.0</version>
+                    <version>3.1.1</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-resources-plugin</artifactId>
-                    <!-- 3.1.0 was released 2018-04-23. -->
-                    <version>3.1.0</version>
+                    <version>3.3.1</version>
+                    <configuration>
+                        <!-- when using java.util.Properties, props files should be ISO-8859-1 -->
+                        <propertiesEncoding>ISO-8859-1</propertiesEncoding>
+                    </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-jar-plugin</artifactId>
-                    <version>3.3.0</version> <!-- released 2022-09-12 -->
+                    <version>3.3.0</version>
                     <configuration>
                         <archive>
                             <!-- automatic module config for java 9+ compatibility -->
@@ -2928,20 +2936,17 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-install-plugin</artifactId>
-                    <!-- 3.0.0-M1 was released 2018-09-23. -->
-                    <version>3.0.0-M1</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-dependency-plugin</artifactId>
-                    <!-- 3.1.1 was released 2018-05-19. -->
                     <version>3.1.1</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-dependency-plugin</artifactId>
+                    <version>3.6.1</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-assembly-plugin</artifactId>
-                    <!-- 3.3.0 was released 2020-04-27. -->
-                    <version>3.3.0</version>
+                    <version>3.6.0</version>
                     <configuration>
                         <tarLongFileMode>posix</tarLongFileMode>
                     </configuration>
@@ -2949,7 +2954,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-shade-plugin</artifactId>
-                    <version>3.4.1</version><!-- published 2022-10-21 -->
+                    <version>3.5.1</version>
                     <configuration>
                         <artifactSet>
                             <excludes combine.children="append">
@@ -3015,13 +3020,12 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <!-- 3.0.0-M4 was released 2019-11-13 -->
-                    <version>3.0.0-M4</version>
+                    <version>3.2.3</version>
                     <dependencies>
                         <dependency>
                             <groupId>org.apache.maven.surefire</groupId>
                             <artifactId>surefire-junit4</artifactId>
-                            <version>3.0.0-M4</version>
+                            <version>3.2.3</version>
                         </dependency>
                     </dependencies>
                     <configuration>
@@ -3061,7 +3065,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-failsafe-plugin</artifactId>
-                    <version>3.0.0-M3</version>
+                    <version>3.2.3</version>
                     <executions>
                         <execution>
                             <goals>
@@ -3083,8 +3087,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-deploy-plugin</artifactId>
-                    <!-- 3.0.0-M2 was released 2021-12-27. -->
-                    <version>3.0.0-M2</version>
+                    <version>3.1.1</version>
                     <configuration>
                         <deployAtEnd>true</deployAtEnd>
                     </configuration>
@@ -3092,25 +3095,22 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-source-plugin</artifactId>
-                    <!-- 3.2.1 was latest as of 2022-02-18 -->
-                    <version>3.2.1</version>
+                    <version>3.3.0</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-javadoc-plugin</artifactId>
-                    <version>3.4.1</version><!-- published 2022-08-10 -->
+                    <version>3.6.3</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-site-plugin</artifactId>
-                    <!-- 3.7.1 was released 2018-04-27. -->
-                    <version>3.7.1</version>
+                    <version>3.12.1</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-release-plugin</artifactId>
-                    <!-- 2.5.3 was released 2015-10-17 and is the latest as of 2018-11-29. -->
-                    <version>2.5.3</version>
+                    <version>3.0.1</version>
                     <configuration>
                         <autoVersionSubmodules>true</autoVersionSubmodules>
                         <tagNameFormat>geomesa-@{project.version}</tagNameFormat>
@@ -3148,8 +3148,7 @@
                 <plugin>
                     <groupId>com.mycila</groupId>
                     <artifactId>license-maven-plugin</artifactId>
-                    <!-- 3.0 was released 2016-08-20 and is the latest as of 2018-11-30. -->
-                    <version>3.0</version>
+                    <version>4.3</version>
                     <configuration>
                         <header>build/copyright/ccri.txt</header>
                         <validHeaders>
@@ -3184,19 +3183,17 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-enforcer-plugin</artifactId>
-                    <!-- 3.0.0-M2 was released 2018-06-16. -->
-                    <version>3.0.0-M2</version>
+                    <version>3.4.1</version>
                 </plugin>
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>build-helper-maven-plugin</artifactId>
-                    <version>3.3.0</version> <!-- released 2022-01-04 -->
+                    <version>3.5.0</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-checkstyle-plugin</artifactId>
-                    <!-- 3.0.0 was released 2018-01-07. -->
-                    <version>3.0.0</version>
+                    <version>3.3.1</version>
                     <dependencies>
                         <dependency>
                             <groupId>org.slf4j</groupId>
@@ -3213,8 +3210,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-gpg-plugin</artifactId>
-                    <!-- 1.6 was released 2015-01-19 and is the latest as of 2018-11-29. -->
-                    <version>1.6</version>
+                    <version>3.1.0</version>
                 </plugin>
             </plugins>
         </pluginManagement>
@@ -3449,7 +3445,7 @@
                                     <regex>2.12</regex>
                                 </requireProperty>
                                 <requireMavenVersion>
-                                    <version>[3.5.2,)</version>
+                                    <version>[3.6.3,)</version>
                                 </requireMavenVersion>
                             </rules>
                         </configuration>
